@@ -15,14 +15,14 @@ from mnemosyne.libmnemosyne.statistics_pages.cards_added import CardsAdded
 from mnemosyne.libmnemosyne.statistics_pages.retention_score import RetentionScore
 from mnemosyne.libmnemosyne.ui_components.statistics_widget import StatisticsWidget
 
-         
+
 class PlotStatisticsWdgt(QtGui.QWidget, StatisticsWidget):
 
     """A canvas to plot graphs according to the data and display contained in a
     statistics page.
 
     """
-    
+
     def __init__(self, component_manager, parent, page):
         QtGui.QWidget.__init__(self, parent)
         StatisticsWidget.__init__(self, component_manager)
@@ -30,7 +30,7 @@ class PlotStatisticsWdgt(QtGui.QWidget, StatisticsWidget):
         self.page = page
 
     def activate(self):
-        self.vbox_layout = QtGui.QVBoxLayout(self)        
+        self.vbox_layout = QtGui.QVBoxLayout(self)
         # The idea was to lazily import matplotlib only when we open the
         # statistics dialog. However, the import statements below can often
         # take ten times as long as compared to the a static import at the
@@ -42,7 +42,7 @@ class PlotStatisticsWdgt(QtGui.QWidget, StatisticsWidget):
         fig = Figure(figsize=(6.5, 5.2), facecolor=colour, edgecolor=colour)
         self.canvas = FigureCanvas(fig)
         self.vbox_layout.addWidget(self.canvas)
-        self.canvas.setSizePolicy(QtGui.QSizePolicy.MinimumExpanding, 
+        self.canvas.setSizePolicy(QtGui.QSizePolicy.MinimumExpanding,
                                   QtGui.QSizePolicy.MinimumExpanding)
         self.canvas.setParent(self)
         self.axes = fig.add_subplot(111)
@@ -60,14 +60,14 @@ class PlotStatisticsWdgt(QtGui.QWidget, StatisticsWidget):
     def integers_only(self, x, pos=None):
 
         """Formatter to have only integer values on the axis."""
-        
+
         if x == int(x):
             return "%d" % x
         else:
             return ""
 
     def _add_numbers_to_bars(self):
-        # Add exact numeric value above each bar. The text padding is based 
+        # Add exact numeric value above each bar. The text padding is based
         # on the average height of non-zero bars. This gives a reasonable
         # padding for most data, but looks ugly when one bar is *much* larger
         # than the others. Note that bool() can be used as the filter function
@@ -84,18 +84,18 @@ class PlotStatisticsWdgt(QtGui.QWidget, StatisticsWidget):
             if height == 0:
                 continue
             self.axes.text(self.page.x[i], height + pad, "%d" % height,
-                           ha="center", va="bottom", fontsize="small")        
-            
+                           ha="center", va="bottom", fontsize="small")
+
     def _background_colour(self, parent):
-        
+
         """Return the parent's background colour.
-        
+
         Sadly, this won't work on OS X, XP, or Vista since they use native
         theme engines for drawing, rather than the palette. See:
         http://doc.trolltech.com/4.4/qapplication.html#setPalette
 
         """
-        
+
         if parent.style().objectName() == "macintosh (Aqua)":
             return "0.91"
         else:
@@ -114,64 +114,64 @@ class BarChartDaysWdgt(PlotStatisticsWdgt):
             self.display_message(_("No stats available."))
             return
         ticklabels_pos = lambda i, j, k: map(lambda x: "+%d" % x, range(i, j, k))
-        ticklabels_neg = lambda i, j, k: map(lambda x: "%d" % x, range(i, j, k)) 
+        ticklabels_neg = lambda i, j, k: map(lambda x: "%d" % x, range(i, j, k))
         if hasattr(self.page, "NEXT_WEEK") and \
                variant == self.page.NEXT_WEEK:
             xticks = range(1, 8, 1)
             xticklabels = ticklabels_pos(1, 8, 1)
             show_text_value = True
-            linewidth = 1 
+            linewidth = 1
         elif hasattr(self.page, "NEXT_MONTH") and \
-            variant == self.page.NEXT_MONTH:   
+            variant == self.page.NEXT_MONTH:
             xticks = [1] + range(5, 32, 5)
             xticklabels = ["+1"] + ticklabels_pos(5, 32, 5)
             show_text_value = False
             linewidth = 1
         elif hasattr(self.page, "NEXT_3_MONTHS") and \
-            variant == self.page.NEXT_3_MONTHS:   
+            variant == self.page.NEXT_3_MONTHS:
             xticks = [1] + range(10, 92, 10)
             xticklabels = ["+1"] + ticklabels_pos(10, 92, 10)
             show_text_value = False
             linewidth = 1
         elif hasattr(self.page, "NEXT_6_MONTHS") and \
-            variant == self.page.NEXT_6_MONTHS:   
+            variant == self.page.NEXT_6_MONTHS:
             xticks = [1] + range(30, 183, 30)
             xticklabels = ["+1"] + ticklabels_pos(30, 183, 30)
             show_text_value = False
-            linewidth = 0             
+            linewidth = 0
         elif hasattr(self.page, "NEXT_YEAR") and \
                  variant == self.page.NEXT_YEAR:
-            xticks = [1] + range(60, 365, 60)            
+            xticks = [1] + range(60, 365, 60)
             xticklabels = ["+1"] + ticklabels_pos(60, 365, 60)
             show_text_value = False
             linewidth = 0
         elif hasattr(self.page, "LAST_WEEK") and \
-                 variant == self.page.LAST_WEEK:
+            variant == self.page.LAST_WEEK:
             xticks = range(-7, 1, 1)
             xticklabels = ticklabels_neg(-7, 1, 1)
             show_text_value = True
-            linewidth = 1 
+            linewidth = 1
         elif hasattr(self.page, "LAST_MONTH") and \
-                 variant == self.page.LAST_MONTH:   
+            variant == self.page.LAST_MONTH:
             xticks = range(-30, -4, 5) + [0]
             xticklabels = ticklabels_neg(-30, -4, 5) + ["0"]
             show_text_value = False
             linewidth = 1
         elif hasattr(self.page, "LAST_3_MONTHS") and \
-            variant == self.page.LAST_3_MONTHS:   
+            variant == self.page.LAST_3_MONTHS:
             xticks = range(-90, -9, 10) + [0]
             xticklabels = ticklabels_neg(-90, -9, 10) + ["0"]
             show_text_value = False
             linewidth = 1
         elif hasattr(self.page, "LAST_6_MONTHS") and \
-            variant == self.page.LAST_6_MONTHS:   
+            variant == self.page.LAST_6_MONTHS:
             xticks = range(-180, -19, 20) + [0]
             xticklabels = ticklabels_neg(-180, -19, 20) + ["0"]
             show_text_value = False
-            linewidth = 0  
+            linewidth = 0
         elif hasattr(self.page, "LAST_YEAR") and \
-                 variant == self.page.LAST_YEAR:
-            xticks = range(-360, -59, 60) + [0]          
+            variant == self.page.LAST_YEAR:
+            xticks = range(-360, -59, 60) + [0]
             xticklabels = ticklabels_neg(-360, -59, 60) + ["0"]
             show_text_value = False
             linewidth = 0
@@ -181,17 +181,22 @@ class BarChartDaysWdgt(PlotStatisticsWdgt):
         self.axes.bar(self.page.x, self.page.y, width=1, align="center",
                       linewidth=linewidth, color=self.colour, alpha=0.75)
         self.axes.set_title(self.title)
-        self.axes.set_xlabel(_("Days")) 
+        self.axes.set_xlabel(_("Days"))
         self.axes.set_xticks(xticks)
         self.axes.set_xticklabels(xticklabels)
         xmin, xmax = min(self.page.x), max(self.page.x)
         self.axes.set_xlim(xmin=xmin - 0.5, xmax=xmax + 0.5)
-        self.axes.set_ylim(ymax=int(max(self.page.y) *  1.1) + 1)
+        # Quick and dirty fix to have retention plot always max out at 100%,
+        # except for LAST_WEEK, when we need space to put the numbers.
+        if variant == self.page.LAST_WEEK or not hasattr(self, "y_max"):
+            self.axes.set_ylim(ymax=int(max(self.page.y) *  1.1) + 1)
+        else:
+            self.axes.set_ylim(ymax=self.y_max)
         from matplotlib.ticker import FuncFormatter
         self.axes.yaxis.set_major_formatter(FuncFormatter(self.integers_only))
         if show_text_value:
             self._add_numbers_to_bars()
-            
+
 
 class ScheduleWdgt(BarChartDaysWdgt):
     title = _("Number of cards scheduled")
@@ -203,14 +208,15 @@ class RetentionScoreWdgt(BarChartDaysWdgt):
     used_for = RetentionScore
     colour = "green"
     title = _("Retention score (%)")
+    y_max = 100
 
-    
+
 class CardsAddedWdgt(BarChartDaysWdgt):
 
     used_for = CardsAdded
     colour = "red"
     title = _("Number of cards added")
-    
+
     def activate(self):
         super(CardsAddedWdgt, self).activate()
         self.title = _(self.title)
@@ -219,9 +225,9 @@ class CardsAddedWdgt(BarChartDaysWdgt):
 class GradesWdgt(PlotStatisticsWdgt):
 
     used_for = Grades
-    
+
     def show_statistics(self, variant):
-        self.activate()   
+        self.activate()
         if not self.page.y:
             self.display_message(_("No stats available."))
             return
@@ -237,14 +243,14 @@ class GradesWdgt(PlotStatisticsWdgt):
         from matplotlib.ticker import FuncFormatter
         self.axes.yaxis.set_major_formatter(FuncFormatter(self.integers_only))
         self._add_numbers_to_bars()
-        
+
 
 class EasinessWdgt(PlotStatisticsWdgt):
 
     used_for = Easiness
-    
+
     def show_statistics(self, variant):
-        self.activate()     
+        self.activate()
         if not self.page.data:
             self.display_message(_("No stats available."))
             return
