@@ -1,7 +1,9 @@
+-Truncate retention score at 100% for non-week long graphs (Dan Schmidt).
+-Don't automatically replace newlines with <br> when tags like table tags,
+ ul or latex are present (reported by Gnome, abakus0816)
 -fix regression for not remembering last shown statictics page (reported by
  Dan Schmidt)
 -Fixes for some configuration settings which were not saved.
-
 -Upgraded PyQt on Windows.
 -Fixes for cards containing multiple mp3 files (reported Patrick de Metz).
 -Made sync more robust.
